@@ -1,22 +1,23 @@
-/* OpenRemote, the Home of the Digital Home.
-* Copyright 2008-2011, OpenRemote Inc.
-*
-* See the contributors.txt file in the distribution for a
-* full listing of individual contributors.
-*
-* This program is free software: you can redistribute it and/or modify
-* it under the terms of the GNU Affero General Public License as
-* published by the Free Software Foundation, either version 3 of the
-* License, or (at your option) any later version.
-*
-* This program is distributed in the hope that it will be useful,
-* but WITHOUT ANY WARRANTY; without even the implied warranty of
-* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-* GNU Affero General Public License for more details.
-*
-* You should have received a copy of the GNU Affero General Public License
-* along with this program. If not, see <http://www.gnu.org/licenses/>.
-*/
+/*
+ * OpenRemote, the Home of the Digital Home.
+ * Copyright 2008-2013, OpenRemote Inc.
+ *
+ * See the contributors.txt file in the distribution for a
+ * full listing of individual contributors.
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program. If not, see <http://www.gnu.org/licenses/>.
+ */
 package org.openremote.controller.protocol.infrared;
 
 import java.io.IOException;
@@ -34,13 +35,13 @@ public class IRCommand implements ExecutableCommand {
    
    /** The logger. */
    private static Logger logger = Logger.getLogger(IRCommand.class.getName());
-   
+
    /** The remote device name. This name MUST be the name defined in lircd.conf */
-   private String name;
-   
+   private String remotename;
+
    /** The button command. Such as menu, play etc. */
    private String command;
-   
+
    /** The configuration. */
    private ControllerConfiguration configuration = ControllerConfiguration.readXML();
    
@@ -49,13 +50,13 @@ public class IRCommand implements ExecutableCommand {
     */
    @Override
    public void send() {
-      irsend("SEND_ONCE");   
+      irsend("SEND_ONCE");
    }
 
 
    /* (non-Javadoc)
     * @see org.openremote.controller.event.Event#start()
-    
+
    @Override
    public void start() {
       irsend("SEND_START");
@@ -63,12 +64,12 @@ public class IRCommand implements ExecutableCommand {
 
     (non-Javadoc)
     * @see org.openremote.controller.event.Event#stop()
-    
+
    @Override
    public void stop() {
       irsend("SEND_STOP");
    }*/
-   
+
 
    /**
     * Irsend.
@@ -77,7 +78,7 @@ public class IRCommand implements ExecutableCommand {
     */
    private void irsend(String sendType) {
       String cmd = configuration.getIrsendPath() + " " 
-          + sendType + " " + getName() + " " + getCommand();
+          + sendType + " " + getRemotename() + " " + getCommand();
       try {
          Process pro = Runtime.getRuntime().exec(cmd);
          logger.info(cmd);
@@ -117,21 +118,21 @@ public class IRCommand implements ExecutableCommand {
    }
 
    /**
-    * Gets the name.
+    * Gets the remotename.
     * 
-    * @return the name
+    * @return the remotename
     */
-   public String getName() {
-      return name;
+   public String getRemotename() {
+      return remotename;
    }
 
    /**
-    * Sets the name.
+    * Sets the remotename.
     * 
-    * @param name the new name
+    * @param name the new remotename
     */
-   public void setName(String name) {
-      this.name = name;
+   public void setRemotename(String remotename) {
+      this.remotename = remotename;
    }
 
    
